# clipboard-wheel

./: .gitignore  .gitmodules  CONTRIBUTING.md  Directory.Build.props  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  release.config.json  settings.example.json
.github/workflows/: build.yml
docs/: ACCEPTANCE_TESTS.md  AGENT_TASKS.md  BRANCH_PROJECT.md  BUILD_OUTPUT_CONTRACT.md  DESIGN_NOTES.md  DIAGNOSTIC_BUILD.md  EXTENDED_WHEEL_DESIGN.md  IMPLEMENTATION_GUIDE.md  LAUNCH_COMPATIBILITY.md  RELEASE_ASSETS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_2.0.2.md  RELEASE_NOTES_2.1.1.md  SHARED_UPDATE_ARCHITECTURE.md  UPDATE_DESIGN.md  用户使用说明.md
native/: CMakeLists.txt  README.md
native/app/: AppHost.cpp  AppHost.h  Version.h.in  app.manifest  app.manifest.in  main.cpp  resources.rc  resources.rc.in
native/core/: Animation.cpp  Animation.h  ClipboardEntry.h  ClipboardHistory.cpp  ClipboardHistory.h  ExtendedWheel.cpp  ExtendedWheel.h  PastePolicy.cpp  PastePolicy.h  Settings.cpp  Settings.h  WheelInteraction.cpp  WheelInteraction.h  WheelLayout.cpp  WheelLayout.h  WheelSelection.h  WheelVisualGeometry.cpp  WheelVisualGeometry.h
native/platform/windows/: AutoStart.cpp  AutoStart.h  ClipboardService.cpp  ClipboardService.h  CrashHandler.cpp  CrashHandler.h  DiagnosticLog.cpp  DiagnosticLog.h  ElevationService.cpp  ElevationService.h  ExtendedActionExecutor.cpp  ExtendedActionExecutor.h  HotkeyCaptureHook.cpp  HotkeyCaptureHook.h  HotkeyCodec.cpp  HotkeyCodec.h  ImageClipboardPayload.cpp  ImageClipboardPayload.h  ManagedShortcutStore.cpp  ManagedShortcutStore.h  MouseHook.cpp  MouseHook.h  SettingsStore.cpp  SettingsStore.h  ShortcutDropHelper.cpp  ShortcutDropHelper.h  ShortcutDropTarget.cpp  ShortcutDropTarget.h  ShortcutIconResolver.cpp  ShortcutIconResolver.h  SingleInstance.cpp  SingleInstance.h  StartupTrace.cpp  StartupTrace.h  TrayIcon.cpp  TrayIcon.h  WindowsClipboardHistory.cpp  WindowsClipboardHistory.h
native/scripts/: build-native.ps1  run-native-diagnostics.ps1  run-native-self-check.ps1
native/tests/: CoreTests.cpp  DiagnosticLogTests.cpp  SettingsStoreTests.cpp  SettingsWindowTests.cpp  WheelWindowTests.cpp  WindowsClipboardTests.cpp
native/ui/: SettingsVisualLayout.cpp  SettingsVisualLayout.h  SettingsWindow.cpp  SettingsWindow.h  WheelWindow.cpp  WheelWindow.h
native/updater/: NativeUpdateCoordinator.cpp  NativeUpdateCoordinator.h  README.md  UpdatePolicy.h  UpdateTypes.h
scripts/: build-diagnostic-package.ps1  build-release.ps1  collect-diagnostic-logs.cmd  collect-diagnostic-logs.ps1  prepare-release-assets.ps1  publish-release.ps1  run-dev.ps1  run-self-check.ps1  verify-online-release.ps1
src/ClipboardWheel/: App.xaml  App.xaml.cs  ClipboardWheel.csproj  app.manifest
src/ClipboardWheel/Models/: AppSettings.cs  ClipboardEntry.cs  PasteMode.cs  WheelLayout.cs  WheelSelection.cs
src/ClipboardWheel/Native/: NativeMethods.cs
src/ClipboardWheel/Services/: ApplicationVersion.cs  AutoStartService.cs  ClipboardHistoryService.cs  ClipboardMonitorService.cs  ElevationService.cs  ForegroundWindowService.cs  MouseHookService.cs  PasteService.cs  PasteTrace.cs  SettingsService.cs  TrayService.cs  WindowsClipboardHistoryService.cs
src/ClipboardWheel/UI/: SettingsWindow.xaml  SettingsWindow.xaml.cs  ShortcutDropHandoff.cs  ShortcutDropHelperWindow.cs  WheelOverlay.xaml  WheelOverlay.xaml.cs
